--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,13 @@
 /* header */
 
 .page_header {
+    padding: 0 10px;
+    box-sizing: border-box;
     position: relative;
     fill: #E8E8E8;
     width: 100%;
     background: #222222;
-    height: 75px;
+    min-height: 75px;
     display: flex;
     align-items: center;
 }
@@ -30,6 +32,7 @@
 .page_header_container {
 
     max-width: 1140px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -423,22 +426,37 @@
 }
 
 .brand_wrp_img {
-    margin-right: 100px;
+    /* margin-right: 100px; */
+
+
 }
 
 .brand {
 
-    height: 764px;
+
     background: #F1E4E6;
     display: flex;
     margin-bottom: 65px;
     justify-content: center;
 }
 
-.brand_box {
+.brand_box_wrap {
+    max-width: 405px;
+    width: 100%;
+    display: block;
     display: flex;
-    margin-top: 290px;
-    margin-right: 331px;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+}
+
+.brand_box {
+    max-width: 405px;
+    width: 100%;
+    display: block;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     position: relative;
 }
 
@@ -452,16 +470,27 @@
 
 }
 
-.brand_box_wrp::before {
+.brand_box::before {
     content: "";
     display: block;
     width: 12px;
     height: 92px;
     background-color: #F16D7F;
     position: absolute;
-    top: 0;
+    top: 335px;
     left: -28px;
 }
+
+/* .brand_box_wrap::before {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 92px;
+    background-color: #F16D7F;
+    position: absolute;
+    top: 319px;
+    left: -28px;
+} */
 
 .brand_box_wrp:hover {
     transform: rotate(360deg);
@@ -469,6 +498,7 @@
 }
 
 .top_text {
+    margin: 0;
     font-family: Lato;
     font-style: normal;
     text-transform: uppercase;
@@ -479,6 +509,8 @@
 }
 
 .bottom_text {
+    margin: 0;
+    display: block;
     font-family: Lato;
     font-style: normal;
     text-transform: uppercase;
@@ -489,6 +521,7 @@
 }
 
 .bottom_text_fashion {
+    /* display: block; */
     text-transform: uppercase;
     font-family: Lato;
     font-style: normal;
@@ -504,7 +537,7 @@
 
 .categories {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
     flex-wrap: wrap;
     width: 100%;
@@ -873,7 +906,8 @@
 
 /* features */
 .features_wrp {
-    min-width: 1140px;
+    max-width: 1140px;
+    width: 100%;
     height: 341px;
     background-color: #222224;
     display: flex;
@@ -890,7 +924,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 230px 0 230px;
+    /* padding: 0 230px 0 230px; */
     box-sizing: border-box;
 }
 
@@ -922,13 +956,24 @@
 .footer {
     width: 100%;
 }
+.footer_bottom_wrp {
+    max-width: 1140px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+    box-sizing: border-box;
 
+}
 .footer_wrp {
     max-width: 1140px;
     width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    padding: 0 10px;
+    box-sizing: border-box;
 
 }
 
@@ -1022,7 +1067,7 @@
 
 .footer_bottom {
     /* max-width: 1600px; */
-    height: 79px;
+    min-height: 79px;
     background-color: #222224;
     display: flex;
     justify-content: space-between;
@@ -1225,7 +1270,7 @@ a {
 
 .other_filters_wrp {
     display: flex;
-    
+
 }
 
 .list_size_margin {
@@ -1955,4 +2000,152 @@ button:focus_visible {
     color: #FFFFFF;
     fill: white;
     box-shadow: none;
+}
+
+
+@media only screen and (max-width: 992px) {
+
+    body {
+        outline: 2px solid red;
+    }
+
+    .products {
+        justify-content: center;
+    }
+
+    .products_item {
+        margin: 10px;
+    }
+
+    /*     .brand_wrp {
+        justify-content: center;
+    } */
+    .brand_wrp_img {
+        /* width: 50%; */
+        /* outline: 1px solid green;  */
+    }
+
+    /*     .brand_wrp_img img {
+        width: 100%;
+        height:100%;
+    } */
+    .brand_box {
+        margin-right: 20px;
+    }
+
+    .btn_products_wrp {
+        margin: 50px 0 0 0;
+    }
+}
+
+/* ========== @media 768px =============  */
+
+@media only screen and (max-width: 768px) {
+    .page_header {
+        padding: 0 32px;
+    }
+
+    .brand {
+        width: 100%;
+        min-height: 368px;
+    }
+
+    .brand_box::before {
+        top: 134px;
+    }
+
+    .top_text {
+        font-size: 44px;
+    }
+
+    .bottom_text,
+    .bottom_text_fashion {
+        font-size: 24px;
+    }
+
+    .categories {
+        margin: 0 0 154px 0;
+    }
+
+    .categories_item {
+        max-width: 232px;
+        width: 100%;
+        min-height: 167px;
+        margin: 0 19px 0 0;
+    }
+
+    .categories_item:nth-child(3) {
+        margin: 0;
+        min-height: 167px;
+    }
+
+    .categories_item:last-child {
+        margin: 19px 0 0 0;
+        min-height: 116px;
+        max-width: 100%;
+    }
+
+    .text_feature_link {
+        margin: 0 0 73px 0;
+    }
+
+    .features {
+        min-height: 610px;
+    }
+
+    .features_wrp {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .footer_top {
+        min-height: 614px;
+    }
+
+    .footer_wrp {
+
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .new_arrivals {
+        padding: 0 16px;
+        box-sizing: border-box;
+    }
+
+    .other_filters {
+        padding: 24px 0px 40px 397px;
+        margin-top: 0%;
+    }
+.filter {
+    padding: 24px 16px 16px 16px;
+}
+.filter_btn {
+    margin: 0;
+}
+.products_item_catalog {
+    display: none;
+}
+.footer_bottom_wrp {
+    width: 100%;
+    display: flex;
+        justify-content: space-between;
+        padding: 0 10px;
+        box-sizing: border-box;
+}
+
+
+
+}
+
+@media only screen and (max-width: 1024px) {
+    .products {
+        justify-content: space-around;
+    }
+
+
+
+
+
+
 }
