--- a/css/style.css
+++ b/css/style.css
@@ -477,7 +477,7 @@
     height: 92px;
     background-color: #F16D7F;
     position: absolute;
-    top: 335px;
+    /* top: 335px; */
     left: -28px;
 }
 
@@ -553,7 +553,7 @@
     flex-wrap: wrap;
     width: 360px;
     min-height: 260px;
-    margin: 0 30px 30px 0;
+    margin: 0 0px 30px 0;
     background-size: cover;
     background-position: center;
     transition: transform 1s;
@@ -956,6 +956,7 @@
 .footer {
     width: 100%;
 }
+
 .footer_bottom_wrp {
     max-width: 1140px;
     width: 100%;
@@ -966,6 +967,7 @@
     box-sizing: border-box;
 
 }
+
 .footer_wrp {
     max-width: 1140px;
     width: 100%;
@@ -1045,7 +1047,7 @@
 .subscribe_btn {
 
     color: #FFFFFF;
-    padding: 20px;
+    padding: 16px;
     box-sizing: border-box;
     border: none;
     border-radius: 0 20px 20px 0;
@@ -1476,7 +1478,7 @@ button:focus_visible {
 .slider {
 
     margin-bottom: -49px;
-    height: 777px;
+    min-height: 777px;
     padding: 0;
     display: flex;
     align-items: center;
@@ -1571,7 +1573,7 @@ button:focus_visible {
 
 .women_collection_price {
     text-align: center;
-    width: 642px;
+    max-width: 642px;
     height: 64px;
     font-weight: 300;
     font-size: 24px;
@@ -1592,6 +1594,7 @@ button:focus_visible {
     font-size: 14px;
     line-height: 17px;
     color: #6F6E6E;
+    text-transform: uppercase;
 }
 
 .choose_item::after {
@@ -1624,6 +1627,7 @@ button:focus_visible {
 
 .btn_svg {
     fill: #F26376;
+    margin-right: 23px;
 }
 
 .btn_cart:hover .btn_svg {
@@ -1637,10 +1641,12 @@ button:focus_visible {
 /* shoping_cart */
 .cart_box {
     margin: 0 auto;
-    padding: 96px 0px 250px 230px;
+    padding: 96px 0px 250px 0px;
     display: flex;
+    justify-content: space-between;
     box-sizing: border-box;
-    max-width: 1600px;
+    max-width: 1140px;
+    width: 100%;
     flex-wrap: wrap;
 }
 
@@ -1650,7 +1656,7 @@ button:focus_visible {
 }
 
 .cart_item {
-    width: 652px;
+    max-width: 652px;
     height: 306px;
     display: flex;
     flex-wrap: wrap;
@@ -1701,7 +1707,7 @@ button:focus_visible {
 
 .mango_number {
     width: 44px;
-    margin-left: 24px;
+    margin-left: 25px;
     padding: 0 0 0 6px;
     box-sizing: border-box;
 }
@@ -1769,7 +1775,7 @@ button:focus_visible {
 }
 
 .right_cart {
-    margin-left: 129px;
+    /* margin-left: 129px; */
     width: 360px;
     height: 272px;
 }
@@ -1956,6 +1962,7 @@ button:focus_visible {
 .list_margin {
     margin-bottom: 16px;
     list-style-type: none;
+
 }
 
 .fa-check {
@@ -2002,11 +2009,49 @@ button:focus_visible {
     box-shadow: none;
 }
 
+.mar {
+    margin-right: 20px;
+}
+
+.footer_wrp_bottom {
+    max-width: 1140px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    /* flex-direction: column-reverse; */
+    padding: 0 10px;
+    box-sizing: border-box;
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1080px) {
+    body {
+        outline: 2px solid red;
+    }
+
+    .categories_item {
+        max-width: 232px;
+        width: 100%;
+        min-height: 167px;
+        margin: 0 19px 0 0;
+    }
+
+    .categories_item:nth-child(3) {
+        margin: 0;
+        min-height: 167px;
+    }
+
+    .categories_item:last-child {
+        margin: 19px 0 0 0;
+        min-height: 116px;
+        max-width: 100%;
+    }
+}
 
 @media only screen and (max-width: 992px) {
 
     body {
-        outline: 2px solid red;
+        /* outline: 2px solid red; */
     }
 
     .products {
@@ -2036,6 +2081,18 @@ button:focus_visible {
     .btn_products_wrp {
         margin: 50px 0 0 0;
     }
+    .breadcrumbs_box {
+        padding: 0;
+    }
+
+    .img_slider {
+        max-width: 361px;
+    width: 100%;
+    }
+    .women_collection_text {
+        width: 326px;
+    }
+
 }
 
 /* ========== @media 768px =============  */
@@ -2065,6 +2122,8 @@ button:focus_visible {
 
     .categories {
         margin: 0 0 154px 0;
+        box-sizing: border-box;
+    padding: 0 16px 0 15px;
     }
 
     .categories_item {
@@ -2114,38 +2173,282 @@ button:focus_visible {
     }
 
     .other_filters {
-        padding: 24px 0px 40px 397px;
+        padding: 24px 0px 40px 380px;
         margin-top: 0%;
     }
-.filter {
-    padding: 24px 16px 16px 16px;
-}
-.filter_btn {
-    margin: 0;
-}
-.products_item_catalog {
-    display: none;
-}
-.footer_bottom_wrp {
-    width: 100%;
-    display: flex;
+
+    .filter {
+        padding: 24px 16px 16px 16px;
+    }
+
+    .filter_btn {
+        margin: 0;
+    }
+
+    .products_item_catalog {
+        display: none;
+    }
+
+    .footer_bottom_wrp {
+        width: 100%;
+        display: flex;
         justify-content: space-between;
         padding: 0 10px;
         box-sizing: border-box;
+    }
+
+    
+    .new_arrivals {
+        padding: 0 16px;
+    }
+
+    .filter_btn {
+        /* margin: 24px 0 0 0; */
+    }
+
+    .filter {
+        /* padding: 0 16px; */
+    }
+
+    .breadcrumbs_box {
+        padding: 0px 16px 0px 16px;
+    }
+
+    .pagination {
+        margin-top: 40px;
+        margin-bottom: 63px;
+    }
+
+    .new_arrivals_wrp {
+        /* padding: 0 0 0 16px; */
+    }
+    .filter_bar_wrp {
+        max-width: 768px;
+        width: 100%;
+    }
+.container1140 {
+    max-width: 768px;
+        width: 100%;
+}
+.products_item_prod:last-child {
+    display: none;
+}
+
+.input_registration {
+    min-width: 360px;
+}
+.registration {
+    padding: 64px 16px 96px 16px;
+}
+.registration_text {
+    margin-left: 22px;
+}
+.reg_text_header {
+    font-size: 16px;
+}
+.list_margin {
+    font-size: 16px;
+     }
+.cart_box {
+    padding: 59px 0px 250px 0px;
+    justify-content: center;
+}
+.cart_item {
+    max-width: 734px;
+} 
+.cross {
+    left: 430px;
+}
+.right_cart {
+    margin: 180px 0 0 0;
 }
 
 
 
+
+
+
+     
 }
+
+
+
 
 @media only screen and (max-width: 1024px) {
     .products {
         justify-content: space-around;
     }
+}
+
+
+
+@media only screen and (max-width: 375px) {
+    .profile {
+        display: none;
+    }
+
+    .cart {
+        display: none;
+    }
+
+    .page_header {
+        padding: 0 16px 0 16px;
+    }
+
+    .brand_wrp_img {
+        display: none;
+    }
+
+    .top_text {
+        font-size: 46px;
+    }
+
+    .bottom_text {
+        font-size: 20px;
+    }
+
+    .brand_box {
+        margin-left: 83px;
+    }
+
+    .categories_item {
+        max-width: 343px;
+        width: 100%;
+        min-height: 247px;
+        margin: 0 16px 32px 16px;
+    }
+
+    .categories_item:nth-child(3) {
+        min-height: 247px;
+        margin: 0 0 32px 16px;
+    }
+
+    .categories {
+        margin: 0 0 64px 0;
+    }
+
+    .text_feature_link {
+        margin: 0 0 64px 0;
+    }
+
+    .btn_products_wrp {
+        margin: 40px 0 0 0;
+    }
+
+    .footer_wrp {
+        flex-direction: column;
+        min-height: 143px;
+        justify-content: center;
+    }
+
+    .feature_item {
+        align-items: center;
+    }
+
+    .social_icons {
+        margin: 8px 0 40px 0;
+    }
+
+    .footer_wrp_bottom {
+        max-width: 1140px;
+        min-height: 143px;
+        width: 100%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column-reverse;
+        padding: 0 10px;
+        box-sizing: border-box;
+        align-items: center;
+    }
+
+    .copy-rigths {
+        margin: 0 0 9px 0;
+    }
+
+    .social_icons {
+        margin: 43px 0 40px 0;
+    }
+
+    .feature_item_top {
+        margin-top: 24px;
+        margin-bottom: 14px;
+    }
+
+    .subscribe_box {
+        max-width: 341px;
+    }
+
+    .footer_top {
+        min-height: 550px;
+    }
+.new_arrivals_wrp {
+    flex-direction: column;
+    align-items: center;
+}
+.filter {
+    width: 1px;
+}
+.other_filters {
+    padding: 24px 0px 40px 12px;
+}
+.slider {
+    min-height: 624px;
+}
+.women_collection_price {
+    min-width: 175px;
+    margin: 0px 0px 42px 0px;
+}
+.women_collection {
+    border: none;
+    border-bottom: 1px solid #EAEAEA;
+}
+.products_margin {
+    margin-top: 64px;
+    margin-bottom: 64px;
+}
+.choose_item {
+    font-size: 10px;
+}
+.features {
+    display: none;
+}
+.input_registration {
+    min-width: 335px;
+}
+.registration {
+    padding: 40px 16px 96px 16px;
+    flex-wrap: wrap;
+}
+.join_btn {
+    margin-bottom: 40px; 
+}
+.footer_top {
+    margin-top: 96px;
+}
+}
 
 
 
 
+@media only screen and (max-width: 750px) {
+    .brand_wrp_img {
+        display: none;
+    }
 
+    .categories_item {
+        max-width: 343px;
+        width: 100%;
+        min-height: 247px;
+        margin: 16px 0 32px 0px;
+    }
 
+    .categories_item:nth-child(3) {
+        min-height: 247px;
+        margin: 0 0 32px 0px;
+    }
+
+    .categories {
+        justify-content: center;
+    }
 }
