--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,7 @@
 }
 
 .brand_wrp_img {
+
     /* margin-right: 100px; */
 
 
@@ -1641,7 +1642,7 @@ button:focus_visible {
 /* shoping_cart */
 .cart_box {
     margin: 0 auto;
-    padding: 96px 0px 250px 0px;
+    padding: 96px 0px 128px 0px;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
@@ -1657,7 +1658,7 @@ button:focus_visible {
 
 .cart_item {
     max-width: 652px;
-    height: 306px;
+    min-height: 306px;
     display: flex;
     flex-wrap: wrap;
     border: 1px solid #EAEAEA;
@@ -1739,7 +1740,7 @@ button:focus_visible {
 }
 
 .btn_cart_margin {
-    margin-top: 72px;
+    margin: 60px 0 0 0;
     width: 239px;
     height: 50px;
     display: flex;
@@ -1755,6 +1756,14 @@ button:focus_visible {
     color: #000000;
     box-shadow: 0 0 10px #4A4A4A;
 }
+
+.btn_cart_box {
+    display: flex;
+    justify-content: space-between;
+    max-width: 654px;
+    width: 100%;
+}
+
 
 .btn_cart_margin:hover {
     background-color: #F26376;
@@ -2081,14 +2090,16 @@ button:focus_visible {
     .btn_products_wrp {
         margin: 50px 0 0 0;
     }
+
     .breadcrumbs_box {
         padding: 0;
     }
 
     .img_slider {
         max-width: 361px;
-    width: 100%;
+        width: 100%;
     }
+
     .women_collection_text {
         width: 326px;
     }
@@ -2123,7 +2134,7 @@ button:focus_visible {
     .categories {
         margin: 0 0 154px 0;
         box-sizing: border-box;
-    padding: 0 16px 0 15px;
+        padding: 0 16px 0 15px;
     }
 
     .categories_item {
@@ -2197,7 +2208,7 @@ button:focus_visible {
         box-sizing: border-box;
     }
 
-    
+
     .new_arrivals {
         padding: 0 16px;
     }
@@ -2222,61 +2233,130 @@ button:focus_visible {
     .new_arrivals_wrp {
         /* padding: 0 0 0 16px; */
     }
+
     .filter_bar_wrp {
         max-width: 768px;
         width: 100%;
     }
-.container1140 {
-    max-width: 768px;
+
+    .container1140 {
+        max-width: 768px;
         width: 100%;
+    }
+
+    .products_item_prod:last-child {
+        display: none;
+    }
+
+    .input_registration {
+        min-width: 360px;
+    }
+
+    .registration {
+        padding: 64px 16px 96px 16px;
+    }
+
+    .registration_text {
+        margin-left: 22px;
+    }
+
+    .reg_text_header {
+        font-size: 16px;
+    }
+
+    .list_margin {
+        font-size: 16px;
+    }
+
+    .cart_box {
+        padding: 59px 0px 128px 0px;
+        justify-content: center;
+    }
+
+    .cart_item {
+        max-width: 734px;
+    }
+
+    .cross {
+        left: 430px;
+    }
+
+    .right_cart {
+        margin: 180px 0 -20px 0;
+    }
+
+    .right_cart {
+        display: flex;
+        justify-content: center;
+        margin-top: 64px;
+    }
+
+    .total {
+        margin: 39px 0 0px 26px;
+    }
+
+    .input_text_cart {
+        min-width: 340px;
+    }
+
+    .total {
+        margin: 39px 0 0px 34px;
+    }
+
+    .btn_cart_margin {
+        margin: -325px 0 0 10px;
+    }
+
+
 }
-.products_item_prod:last-child {
-    display: none;
-}
-
-.input_registration {
-    min-width: 360px;
-}
-.registration {
-    padding: 64px 16px 96px 16px;
-}
-.registration_text {
-    margin-left: 22px;
-}
-.reg_text_header {
-    font-size: 16px;
-}
-.list_margin {
-    font-size: 16px;
-     }
-.cart_box {
-    padding: 59px 0px 250px 0px;
-    justify-content: center;
-}
-.cart_item {
-    max-width: 734px;
-} 
-.cross {
-    left: 430px;
-}
-.right_cart {
-    margin: 180px 0 0 0;
-}
 
 
 
-
-
-
-     
-}
-
-
-
-
-@media only screen and (max-width: 1024px) {
+@media only screen and (min-width: 1024px) and (max-width:1025px) {
     .products {
         justify-content: space-around;
+    }
+
+    .new_arrivals_wrp {
+        padding: 0 20px;
+    }
+
+    .filter_bar_wrp {
+        padding: 0 0;
+    }
+
+    .other_filters_wrp {
+        margin: 0 0;
+    }
+
+    .products_item:last-child {
+        display: none;
+    }
+
+    .container1140 {
+        max-width: 1000px;
+    }
+
+    .registration {
+        padding: 40px 0px 60px 30px;
+    }
+
+    .cart_box {
+        display: block;
+        margin: 0 195px;
+    }
+
+    .right_cart {
+        display: flex;
+    }
+
+    .right_cart_input {
+        min-width: 270px;
+    }
+
+    .total {
+        margin-left: 26px;
+        margin-top: 38px;
     }
 }
 
@@ -2382,50 +2462,150 @@ button:focus_visible {
     .footer_top {
         min-height: 550px;
     }
-.new_arrivals_wrp {
-    flex-direction: column;
-    align-items: center;
-}
-.filter {
-    width: 1px;
-}
-.other_filters {
-    padding: 24px 0px 40px 12px;
-}
-.slider {
-    min-height: 624px;
-}
-.women_collection_price {
-    min-width: 175px;
-    margin: 0px 0px 42px 0px;
-}
-.women_collection {
-    border: none;
-    border-bottom: 1px solid #EAEAEA;
-}
-.products_margin {
-    margin-top: 64px;
-    margin-bottom: 64px;
-}
-.choose_item {
-    font-size: 10px;
-}
-.features {
-    display: none;
-}
-.input_registration {
-    min-width: 335px;
-}
-.registration {
-    padding: 40px 16px 96px 16px;
-    flex-wrap: wrap;
-}
-.join_btn {
-    margin-bottom: 40px; 
-}
-.footer_top {
-    margin-top: 96px;
-}
+
+    .new_arrivals_wrp {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .filter {
+        width: 1px;
+    }
+
+    .other_filters {
+        padding: 24px 0px 40px 12px;
+    }
+
+    .slider {
+        min-height: 624px;
+    }
+
+    .women_collection_price {
+        min-width: 175px;
+        margin: 0px 0px 42px 0px;
+    }
+
+    .women_collection {
+        border: none;
+        border-bottom: 1px solid #EAEAEA;
+    }
+
+    .products_margin {
+        margin-top: 64px;
+        margin-bottom: 64px;
+    }
+
+    .choose_item {
+        font-size: 10px;
+    }
+
+    .features {
+        display: none;
+    }
+
+    .input_registration {
+        min-width: 335px;
+    }
+
+    .registration {
+        padding: 40px 16px 96px 16px;
+        flex-wrap: wrap;
+    }
+
+    .join_btn {
+        margin-bottom: 40px;
+    }
+
+    .footer_top {
+        margin-top: 96px;
+    }
+
+    .slider_switch_right {
+        position: absolute;
+        left: 328px;
+    }
+
+    .slider_switch_left {
+        position: absolute;
+        z-index: 1;
+    }
+
+    .img_slider {
+        position: relative;
+    }
+
+    .cart_item {
+        max-width: 358px;
+        min-height: 188px;
+    }
+
+    .text_mango_ {
+        font-size: 16px;
+
+    }
+
+    .cart_item_text_box {
+        padding: 13px 36px 0px 17px;
+    }
+
+    .text_mango {
+        font-size: 16px;
+        margin: 0 0 20px 0;
+    }
+
+    .text_price {
+        font-size: 14px;
+        margin: 0 0 4px 0;
+        line-height: 16px;
+    }
+
+    .mango_number {
+        width: 24px;
+        height: 24px;
+        margin: -3px 0px 0px 15px;
+    }
+
+    .cart_img {
+        width: 143px;
+        height: 188px;
+        margin: 0px 0px 0px 0px;
+    }
+
+    .cross {
+        left: 178px;
+        top: 15px;
+    }
+
+    .btn_cart_margin {
+        padding: 10px 0px 0px 0px;
+        margin: 0;
+        width: 175px;
+        height: 33px;
+        line-height: 14px;
+        font-size: 12px;
+        margin-right: 9px;
+    }
+
+    .right_cart {
+        margin: 48px 0 0 0;
+        display: block;
+    }
+
+    .cart_box {
+        padding: 59px 0px 256px 0px;
+    }
+
+    .total {
+        margin: 39px 0 0px 0px;
+    }
+
+    .input_text_cart {
+        width: 0;
+    }
+
+    .btn_cart_box {
+        margin: -328px 0px 0 7px;
+    }
 }
 
 
