--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@
     list-style: none;
 
     position: absolute;
-    top: 75px;
+    top: 60px;
     /* значение в свойстве top удобно задать через переменную равную высоте первого блока */
     right: 0;
     z-index: 20;
@@ -1415,7 +1415,7 @@ button:focus_visible {
 
 .list_size_item_title {
     display: block;
-    margin: 0 0 6px 0;
+    margin: 0 21px 6px 0;
     position: relative;
     text-transform: uppercase;
     font-family: Roboto;
@@ -1435,6 +1435,17 @@ button:focus_visible {
     position: absolute;
     top: 1px;
     left: -23.5px;
+}
+
+.filter_word {
+    color: black;
+    font-size: 14px;
+    line-height: 17px;
+    margin-right: 11px;
+}
+
+.filter_word:hover {
+    color: #EF5B70;
 }
 
 .filter_sublist_item_marg {
@@ -1543,6 +1554,19 @@ button:focus_visible {
     line-height: 17px;
     color: #F16D7F;
     text-transform: uppercase;
+    position: relative;
+    margin-bottom: 45px;
+}
+
+.women_collection_header::after {
+    content: "";
+    display: block;
+    width: 63px;
+    height: 3px;
+    background-color: #F16D7F;
+    left: 42px;
+    top: 42px;
+    position: absolute;
 }
 
 .women_collection_stick {
@@ -1574,7 +1598,7 @@ button:focus_visible {
 
 .women_collection_price {
     text-align: center;
-    max-width: 642px;
+    width: 642px;
     height: 64px;
     font-weight: 300;
     font-size: 24px;
@@ -1708,6 +1732,8 @@ button:focus_visible {
 
 .mango_number {
     width: 44px;
+    height: 25px;
+    margin-top: 13px;
     margin-left: 25px;
     padding: 0 0 0 6px;
     box-sizing: border-box;
@@ -1780,7 +1806,7 @@ button:focus_visible {
 .cross {
     position: absolute;
     top: 26px;
-    left: 315px;
+    left: 354px;
 }
 
 .right_cart {
@@ -2126,6 +2152,10 @@ button:focus_visible {
         font-size: 44px;
     }
 
+    .women_collection_price {
+        margin-bottom: 24px;
+    }
+
     .bottom_text,
     .bottom_text_fashion {
         font-size: 24px;
@@ -2367,6 +2397,11 @@ button:focus_visible {
         display: none;
     }
 
+    .filter_list {
+        background-color: white;
+        width: 207px;
+    }
+
     .cart {
         display: none;
     }
@@ -2472,6 +2507,10 @@ button:focus_visible {
         width: 1px;
     }
 
+    .filter_word {
+        display: none;
+    }
+
     .other_filters {
         padding: 24px 0px 40px 12px;
     }
@@ -2481,7 +2520,7 @@ button:focus_visible {
     }
 
     .women_collection_price {
-        min-width: 175px;
+        width: 175px;
         margin: 0px 0px 42px 0px;
     }
 
@@ -2561,8 +2600,9 @@ button:focus_visible {
 
     .mango_number {
         width: 24px;
-        height: 24px;
-        margin: -3px 0px 0px 15px;
+        height: 15px;
+
+        margin: 0px 0px 0px 15px;
     }
 
     .cart_img {
